# mcda-dataviz-tutorial

./: .gitignore  404.html  CLAUDE.md  README.md  _redirects  index.html  pyproject.toml
.claude/: settings.local.json
assets/: 4-DKHcgrst.css  5-BEQ7l-Ai.js  5-CAZw6jTy.js  5-CaIkgccw.js  5-zkTIOd1p.js  arc-911b4007-CwHHgECc.js  arc-911b4007-CwgaQS9Z.js  arc-911b4007-DgsxwVdg.js  arc-911b4007-Swr_ByXW.js  blockDiagram-6538aad3-CYBEU0cL.js  blockDiagram-6538aad3-LWrsS-nA.js  blockDiagram-6538aad3-TYBEQQiW.js  blockDiagram-6538aad3-rjU-sDzV.js  c4Diagram-5c061bbf-BPdGX2iT.js  c4Diagram-5c061bbf-BXpu9Xo0.js  c4Diagram-5c061bbf-CGbzSRaA.js  c4Diagram-5c061bbf-hCA139YB.js  channel-f19f13a4-B31J61EE.js  channel-f19f13a4-CVazrXQw.js  channel-f19f13a4-DHndcHJe.js  channel-f19f13a4-DI5MKNxR.js  classDiagram-3d51384c-DS7DU-bG.js  classDiagram-3d51384c-DeH-Gvg9.js  classDiagram-3d51384c-bTIuG0F5.js  classDiagram-3d51384c-jCvnNgE2.js  classDiagram-v2-79130fb8-B6w8haDf.js  classDiagram-v2-79130fb8-BzHkT8xV.js  classDiagram-v2-79130fb8-D30Dnocy.js  classDiagram-v2-79130fb8-VxFUAax_.js  clone-efe1c6aa-3LI6CTaR.js  clone-efe1c6aa-BDS8mmZz.js  clone-efe1c6aa-BvOsWSeg.js  clone-efe1c6aa-CPr94umh.js  createText-2822bf05-Blp1a07b.js  createText-2822bf05-Cus4s6E2.js  createText-2822bf05-Cx2MVBkl.js  createText-2822bf05-DegesNH1.js  edges-568b5f94-BU2c1jvl.js  edges-568b5f94-CTYXc3gt.js  edges-568b5f94-DixMd3ll.js  (+120 more)
data/: experiment_results.csv  sales_data.csv  weather_data.csv
exercises/: visualization-exercises.ipynb
images/: image-prompts.md
scripts/: generate_anscombes_quartet.py
(+244 files in other folders)
